force-app/main/default/objects/Portal_Footer_Message__mdt/Portal_Footer_Message__mdt.object-meta.xml
<CustomObject>
    <label>Portal Footer Message</label>
    <pluralLabel>Portal Footer Messages</pluralLabel>
</CustomObject>