force-app/main/default/objects/Portal_Footer_Message__mdt/fields/Legal_Statement__c.field-meta.xml
<CustomField>
    <fullName>Legal_Statement__c</fullName>
    <label>Legal Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>